// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styles bodyLong01 should be printable 1`] = `
"font-size: 0.875rem;
font-weight: 400;
line-height: 1.43;
letter-spacing: 0.16px;"
`;

exports[`styles bodyLong02 should be printable 1`] = `
"font-size: 1rem;
font-weight: 400;
line-height: 1.5;
letter-spacing: 0;"
`;

exports[`styles bodyShort01 should be printable 1`] = `
"font-size: 0.875rem;
font-weight: 400;
line-height: 1.29;
letter-spacing: 0.16px;"
`;

exports[`styles bodyShort02 should be printable 1`] = `
"font-size: 1rem;
font-weight: 400;
line-height: 1.375;
letter-spacing: 0;"
`;

exports[`styles caption01 should be printable 1`] = `
"font-size: 0.75rem;
font-weight: 400;
line-height: 1.34;
letter-spacing: 0.32px;"
`;

exports[`styles caption02 should be printable 1`] = `
"font-size: 0.875rem;
font-weight: 400;
line-height: 1.29;
letter-spacing: 0.32px;"
`;

exports[`styles code01 should be printable 1`] = `
"font-family: 'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', Courier, monospace;
font-size: 0.75rem;
font-weight: 400;
line-height: 1.34;
letter-spacing: 0.32px;"
`;

exports[`styles code02 should be printable 1`] = `
"font-family: 'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', Courier, monospace;
font-size: 0.875rem;
font-weight: 400;
line-height: 1.43;
letter-spacing: 0.32px;"
`;

exports[`styles display01 should be printable 1`] = `
"font-size: 2.625rem;
font-weight: 300;
line-height: 1.19;
letter-spacing: 0;"
`;

exports[`styles display02 should be printable 1`] = `
"font-size: 2.625rem;
font-weight: 600;
line-height: 1.19;
letter-spacing: 0;"
`;

exports[`styles display03 should be printable 1`] = `
"font-size: 2.625rem;
font-weight: 300;
line-height: 1.19;
letter-spacing: 0;"
`;

exports[`styles display04 should be printable 1`] = `
"font-size: 2.625rem;
font-weight: 600;
line-height: 1.19;
letter-spacing: 0;"
`;

exports[`styles expressiveHeading01 should be printable 1`] = `
"font-size: 0.875rem;
font-weight: 600;
line-height: 1.25;
letter-spacing: 0.16px;"
`;

exports[`styles expressiveHeading02 should be printable 1`] = `
"font-size: 1rem;
font-weight: 600;
line-height: 1.5;
letter-spacing: 0;"
`;

exports[`styles expressiveHeading03 should be printable 1`] = `
"font-size: 1.25rem;
font-weight: 400;
line-height: 1.4;
letter-spacing: 0;"
`;

exports[`styles expressiveHeading04 should be printable 1`] = `
"font-size: 1.75rem;
font-weight: 400;
line-height: 1.29;
letter-spacing: 0;"
`;

exports[`styles expressiveHeading05 should be printable 1`] = `
"font-size: 2rem;
font-weight: 400;
line-height: 1.25;
letter-spacing: 0;"
`;

exports[`styles expressiveHeading06 should be printable 1`] = `
"font-size: 2rem;
font-weight: 600;
line-height: 1.25;
letter-spacing: 0;"
`;

exports[`styles expressiveParagraph01 should be printable 1`] = `
"font-size: 1.5rem;
font-weight: 300;
line-height: 1.334;
letter-spacing: 0;"
`;

exports[`styles heading01 should be printable 1`] = `
"font-size: 0.875rem;
font-weight: 600;
line-height: 1.29;
letter-spacing: 0.16px;"
`;

exports[`styles heading02 should be printable 1`] = `
"font-size: 1rem;
font-weight: 600;
line-height: 1.375;
letter-spacing: 0;"
`;

exports[`styles helperText01 should be printable 1`] = `
"font-size: 0.75rem;
line-height: 1.34;
letter-spacing: 0.32px;"
`;

exports[`styles helperText02 should be printable 1`] = `
"font-size: 0.875rem;
line-height: 1.29;
letter-spacing: 0.32px;"
`;

exports[`styles label01 should be printable 1`] = `
"font-size: 0.75rem;
font-weight: 400;
line-height: 1.34;
letter-spacing: 0.32px;"
`;

exports[`styles label02 should be printable 1`] = `
"font-size: 0.875rem;
font-weight: 400;
line-height: 1.29;
letter-spacing: 0.32px;"
`;

exports[`styles productiveHeading01 should be printable 1`] = `
"font-size: 0.875rem;
font-weight: 600;
line-height: 1.29;
letter-spacing: 0.16px;"
`;

exports[`styles productiveHeading02 should be printable 1`] = `
"font-size: 1rem;
font-weight: 600;
line-height: 1.375;
letter-spacing: 0;"
`;

exports[`styles productiveHeading03 should be printable 1`] = `
"font-size: 1.25rem;
font-weight: 400;
line-height: 1.4;
letter-spacing: 0;"
`;

exports[`styles productiveHeading04 should be printable 1`] = `
"font-size: 1.75rem;
font-weight: 400;
line-height: 1.29;
letter-spacing: 0;"
`;

exports[`styles productiveHeading05 should be printable 1`] = `
"font-size: 2rem;
font-weight: 400;
line-height: 1.25;
letter-spacing: 0;"
`;

exports[`styles productiveHeading06 should be printable 1`] = `
"font-size: 2.625rem;
font-weight: 300;
line-height: 1.199;
letter-spacing: 0;"
`;

exports[`styles productiveHeading07 should be printable 1`] = `
"font-size: 3.375rem;
font-weight: 300;
line-height: 1.19;
letter-spacing: 0;"
`;

exports[`styles quotation01 should be printable 1`] = `
"font-size: 1.25rem;
font-weight: 400;
line-height: 1.3;
letter-spacing: 0;"
`;

exports[`styles quotation02 should be printable 1`] = `
"font-size: 2rem;
font-weight: 300;
line-height: 1.25;
letter-spacing: 0;"
`;
